Fixed wrapping of buttons and footer links for mobile-friendliness

--- a/style.css
+++ b/style.css
@@ -123,7 +123,9 @@ h4{
 .footer_links {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   gap: 25px;
+  justify-content: center;
 }
 
 .footer a{
@@ -163,6 +165,7 @@ h4{
 .button_container {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   gap: 25px;
 }
 
